# bookrag

./: .env.example  .gitignore  Dockerfile  README.md  chat_tui.py  docker-compose.yml  main.py  pyproject.toml  the Origin of Species.txt
data/: PROMPT.md
src/: __init__.py  api.py  config.py
src/agent/: core.py  memory.py
src/agent/tools/: __init__.py  rag_tool.py  tool.py
src/rag/: chunk.py  db.py  embed.py  retrieve.py
